11/20/2018 17:09 /////  added logout glaphyicon and showing userShow behind it and setting userShow on req.session.user on navbar on VERSION 001

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -39,7 +39,10 @@
 				<ul class="nav navbar-nav navbar-right">
 					<% if(locals.loggedIn){ %>
 					<li>
-						<a style="cursor: pointer;" id="LogoutBtn" href="/logout"><span class="glyphicon glyphicon-user"></span> خروج!</a>
+						<a style="cursor: pointer;" id="LogoutBtn" href="/logout"><span class="glyphicon glyphicon glyphicon-log-out"></span> خروج</a>
+					</li>
+					<li>
+						<a style="cursor: pointer;" id="UserNameSpan"><span class="glyphicon glyphicon-user"></span> <%= userShow %> </a>
 					</li>
 					<% } else { %>
 					<li>
