--- a/views/index.ejs
+++ b/views/index.ejs
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-	<title>استاد یار</title>
+	<title>دَرسام</title>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
@@ -228,7 +228,7 @@
 
 
 	<footer class="container-fluid fixed-bottom text-center">
-		<p>Ostadyar test</p>
+		<p>Darsam test</p>
 		<button type="button" class="btn"><a href="#">درباره ما</a></button>
 	</footer>
 
